# SUV_Extractor

./: README.md  SUV_Extractor.py  main.py  pyproject.toml
Analysis/: Comparison_to_manual.py  Normalization_to_aorta.py  SUV_calculation.py
Image_loading/: Image_Loader.py  Segmentator.py
Image_loading/Segmentation_toolbox/: image_alignment.py  image_manipulations.py
Results_saving/: results_saver.py
