[project]
name = "suv-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "path>=17.1.1",
    "pydicom>=3.0.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "simpleitk>=2.5.3",
    "tqdm>=4.67.3",
]
